# gameoflife

./: Cargo.toml
src/: app.rs  grid.rs  grid_widget.rs  gui.rs  main.rs  menu.rs
src/gui/: mod.rs  widget.rs
