[package]
authors = ["Jonas Westlund <jonaswestlund101@gmail.com>"]
name = "gameoflife"
version = "0.1.0"
[dependencies]
gdk = "0.6.0"

[dependencies.clippy]
optional = true
version = "*"

[dependencies.gtk]
features = ["v3_10"]
version = "0.2.0"

[features]
default = []

[profile.dev]
codegen-units=32